--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="utf-8" />
-    <title>ユーザ一覧</title>
+	<meta charset="utf-8" />
+	<title>ユーザ一覧</title>
 </head>
+
 <body>
-ユーザ一覧
+	<table border="1">
+		<tr>
+			<th>　</th>
+			<th>ID</th>
+			<th>ユーザ名</th>
+			<th>管理者</th>
+		</tr>
+		<th:block th:each="user : ${users}">
+			<tr>
+				<td><a href="/user/detail" th:href="@{/user/detail(id=${user.id})}">詳細</a></td>
+				<td th:text="${user.id}">999</td>
+				<td th:text="${user.name}">ダミー　名</td>
+				<td th:text="${user.administrator}">xxxx</td>
+			</tr>
+		</th:block>
 </body>
+
 </html>
