ユーザ変更実装

--- a/src/main/resources/templates/user-modify.html
+++ b/src/main/resources/templates/user-modify.html
@@ -6,9 +6,15 @@
 </head>
 <body>
 <form action="#" th:action="@{/user/modify/confirm}" method="post" th:object="${user}">
-<div>ID：<input type="text" th:field="*{id}" value="999"></div>
+<div>ID：<span th:text="*{id}">999</span></div>
+<input type="hidden" th:field="*{id}" value="999">
 <div>ユーザ名：<input type="text" th:field="*{name}" value="テスト名"></div>
-<div>管理者：<input type="text" th:field="*{administrator}" value="false"></div>
+<div>管理者：
+  <input type="radio" th:field="*{administrator}" value="true"/>
+  <label th:for="${#ids.prev('administrator')}" th:text="true"></label>
+  <input type="radio" th:field="*{administrator}" value="false"/>
+  <label th:for="${#ids.prev('administrator')}" th:text="false"></label>
+</div>
 <div><a href="user-modify.html" th:href="@{/user/detail(id=${user.id})}">戻る</a>
      <input type="submit" value="変更確認"></div>
 </form>
