--- a/src/main/resources/templates/user-detail.html
+++ b/src/main/resources/templates/user-detail.html
@@ -8,7 +8,8 @@
 <div>ID：<span th:text="${user.id}">999</span></div>
 <div>ユーザ名：<span th:text="${user.name}">テスト名</span></div>
 <div>管理者：<span th:text="${user.administrator}">false</span></div>
-<div><a href="user-modify.html" th:href="@{/user/modify(id=${user.id})}">変更</a>
+<div><a href="user-modify.html" th:href="@{/user/list}">ユーザ一覧へ</a>
+     <a href="user-modify.html" th:href="@{/user/modify(id=${user.id})}">変更</a>
      <a href="user-modify.html" th:href="@{/user/delete(id=${user.id})}">削除</a></div>
 </body>
 </html>
