--- a/src/main/resources/templates/user-delete-confirm.html
+++ b/src/main/resources/templates/user-delete-confirm.html
@@ -2,18 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>ユーザ登録確認</title>
+    <title>ユーザ削除確認</title>
 </head>
 <body>
 <div>ID：<span th:text="${user.id}">999</span></div>
 <div>ユーザ名：<span th:text="${user.name}">テスト名</span></div>
 <div>管理者：<span th:text="${user.administrator}">false</span></div>
-<form action="#" th:action="@{/user/entry/complete}" method="post" th:object="${user}">
+<form action="#" th:action="@{/user/delete/complete}" method="post" th:object="${user}">
 <input type="hidden" th:field="*{id}">
 <input type="hidden" th:field="*{name}">
 <input type="hidden" th:field="*{administrator}">
-<div><a href="user-modify.html" th:href="@{/user/entry(id=${user.id},name=${user.name},administrator=${user.administrator})}">戻る</a>
-     <input type="submit" value="登録"></div>
+<div><a href="user-modify.html" th:href="@{/user/detail(id=${user.id})}">戻る</a>
+     <input type="submit" value="削除"></div>
 </form>
 </body>
 </html>
