--- a/src/main/resources/templates/user-entry.html
+++ b/src/main/resources/templates/user-entry.html
@@ -5,6 +5,18 @@
     <title>ユーザ登録</title>
 </head>
 <body>
-ユーザ登録
+<form action="#" th:action="@{/user/entry/confirm}" method="post" th:object="${user}">
+<div>ID：<span th:text="*{id}">999</span></div>
+<input type="hidden" th:field="*{id}" value="999">
+<div>ユーザ名：<input type="text" th:field="*{name}" value="テスト名"></div>
+<div>管理者：
+  <input type="radio" th:field="*{administrator}" value="true"/>
+  <label th:for="${#ids.prev('administrator')}" th:text="true"></label>
+  <input type="radio" th:field="*{administrator}" value="false"/>
+  <label th:for="${#ids.prev('administrator')}" th:text="false"></label>
+</div>
+<div><a href="/user/list">戻る</a>
+     <input type="submit" value="登録確認"></div>
+</form>
 </body>
 </html>
