入力チェック追加

--- a/src/main/resources/templates/user-delete-confirm.html
+++ b/src/main/resources/templates/user-delete-confirm.html
@@ -5,6 +5,7 @@
     <title>ユーザ削除確認</title>
 </head>
 <body>
+<div>削除します。よろしいですか？</div>
 <div>ID：<span th:text="${user.id}">999</span></div>
 <div>ユーザ名：<span th:text="${user.name}">テスト名</span></div>
 <div>管理者：<span th:text="${user.administrator}">false</span></div>
