デザイン変更

--- a/src/main/resources/templates/user-modify.html
+++ b/src/main/resources/templates/user-modify.html
@@ -4,12 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>ユーザ変更</title>
-	<style>
-		.error-message {
-			color: red;
-			font-weight: bold;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
