--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="utf-8" />
 	<title>ユーザ一覧</title>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
-	<div><a href="/user/entry">登録</a></div>
-	<table border="1">
+	<div><a href="/user/entry">ユーザ登録</a></div>
+	<table>
 		<tr>
-			<th>　</th>
+			<th>操作</th>
 			<th>ID</th>
 			<th>ユーザ名</th>
 			<th>管理者</th>
@@ -19,10 +20,11 @@
 			<tr>
 				<td><a href="/user/detail" th:href="@{/user/detail(id=${user.id})}">詳細</a></td>
 				<td th:text="${user.id}">999</td>
-				<td th:text="${user.name}">ダミー　名</td>
+				<td th:text="${user.name}">ダミー名</td>
 				<td th:text="${user.administrator}">xxxx</td>
 			</tr>
 		</th:block>
+	</table>
 </body>
 
 </html>
