--- a/src/main/resources/templates/user-entry.html
+++ b/src/main/resources/templates/user-entry.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-	<form class="user-form" action="#" th:action="@{/user/entry/confirm}" method="post" th:object="${userDomain}">
-		<h1 class="form-title">ユーザ登録</h1>
+	<form action="#" th:action="@{/user/entry/confirm}" method="post" th:object="${userDomain}">
+		<h1>ユーザ登録</h1>
 		<table>
 			<tr>
 				<th>ID</th>
@@ -17,7 +17,10 @@
 			</tr>
 			<tr>
 				<th>ユーザ名</td>
-				<td><div id="name-errors" th:errors="*{name}"	class="error-message"></div><input type="text" th:field="*{name}" value="テスト名"></td>
+				<td>
+					<div id="name-errors" th:errors="*{name}" class="error-message"></div><input type="text"
+						th:field="*{name}" value="テスト名">
+				</td>
 			</tr>
 			<tr>
 				<th>管理者</td>
