--- a/src/main/resources/templates/user-modify.html
+++ b/src/main/resources/templates/user-modify.html
@@ -9,17 +9,34 @@
 
 <body>
 	<form action="#" th:action="@{/user/modify/confirm}" method="post" th:object="${userDomain}">
-		<div>ID：<span th:text="*{id}">999</span></div>
-		<input type="hidden" th:field="*{id}" value="999">
-		<div>ユーザ名：<input type="text" th:field="*{name}" value="テスト名"><span id="name-errors" th:errors="*{name}"
-				class="error-message"></span></div>
-		<div>管理者：
-			<input type="radio" th:field="*{administrator}" value="true" />
-			<label th:for="${#ids.prev('administrator')}" th:text="true"></label>
-			<input type="radio" th:field="*{administrator}" value="false" />
-			<label th:for="${#ids.prev('administrator')}" th:text="false"></label>
-		</div>
-		<div><a href="user-modify.html" th:href="@{/user/detail(id=${userDomain.id})}">戻る</a>
+		<h1 class="form-title">ユーザ変更</h1>
+		<table>
+			<tr>
+				<th>ID</th>
+				<td>
+					<span th:text="*{id}">999</span>
+					<input type="hidden" th:field="*{id}" value="999">
+				</td>
+			</tr>
+			<tr>
+				<th>ユーザ名</th>
+				<td>
+					<input type="text" th:field="*{name}" value="テスト名"><span id="name-errors" th:errors="*{name}"
+							class="error-message"></span></div>
+				</td>
+			</tr>
+			<tr>
+				<th>管理者</th>
+				<td>
+					<input type="radio" th:field="*{administrator}" value="true" />
+					<label th:for="${#ids.prev('administrator')}" th:text="true"></label>
+					<input type="radio" th:field="*{administrator}" value="false" />
+					<label th:for="${#ids.prev('administrator')}" th:text="false"></label>
+				</td>
+			</tr>
+		</table>
+		<div class="under-items">
+			<a href="user-modify.html" th:href="@{/user/detail(id=${userDomain.id})}">戻る</a>
 			<input type="submit" value="変更確認">
 		</div>
 	</form>
