--- a/src/main/resources/templates/user-entry.html
+++ b/src/main/resources/templates/user-entry.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<form action="#" th:action="@{/user/entry/confirm}" method="post" th:object="${userDomain}">
+	<form action="#" th:action="@{/user/entry/confirm}" method="post" th:object="${userFormDto}">
 		<h1>ユーザ登録</h1>
 		<table>
 			<tr>
