--- a/src/main/resources/templates/user-modify-confirm.html
+++ b/src/main/resources/templates/user-modify-confirm.html
@@ -13,23 +13,23 @@
 	<table>
 		<tr>
 			<th>ID</th>
-			<td><span th:text="${userDomain.id}">999</span></td>
+			<td><span th:text="${userFormDto.id}">999</span></td>
 		</tr>
 		<tr>
 			<th>ユーザ名</th>
-			<td><span th:text="${userDomain.name}">テスト名</span></td>
+			<td><span th:text="${userFormDto.name}">テスト名</span></td>
 		</tr>
 		<tr>
 			<th>管理者</th>
-			<td><span th:text="${userDomain.administrator}">false</span></td>
+			<td><span th:text="${userFormDto.administrator}">false</span></td>
 		</tr>
 	</table>
-	<form action="#" th:action="@{/user/modify/complete}" method="post" th:object="${userDomain}"　class="under-items">
+	<form action="#" th:action="@{/user/modify/complete}" method="post" th:object="${userFormDto}"　class="under-items">
 		<input type="hidden" th:field="*{id}">
 		<input type="hidden" th:field="*{name}">
 		<input type="hidden" th:field="*{administrator}">
 		<div><a href="user-modify.html"
-				th:href="@{/user/modify(id=${userDomain.id},name=${userDomain.name},administrator=${userDomain.administrator})}">戻る</a>
+				th:href="@{/user/modify(id=${userFormDto.id},name=${userFormDto.name},administrator=${userFormDto.administrator})}">戻る</a>
 			<input type="submit" value="変更">
 		</div>
 	</form>
