--- a/src/main/resources/templates/user-modify.html
+++ b/src/main/resources/templates/user-modify.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<form action="#" th:action="@{/user/modify/confirm}" method="post" th:object="${userDomain}">
+	<form action="#" th:action="@{/user/modify/confirm}" method="post" th:object="${userFormDto}">
 		<h1 class="form-title">ユーザ変更</h1>
 		<table>
 			<tr>
@@ -21,8 +21,8 @@
 			<tr>
 				<th>ユーザ名</th>
 				<td>
-					<input type="text" th:field="*{name}" value="テスト名"><span id="name-errors" th:errors="*{name}"
-							class="error-message"></span></div>
+					<div id="name-errors" th:errors="*{name}" class="error-message"></div>
+					<input type="text" th:field="*{name}" value="テスト名">
 				</td>
 			</tr>
 			<tr>
@@ -36,7 +36,7 @@
 			</tr>
 		</table>
 		<div class="under-items">
-			<a href="user-modify.html" th:href="@{/user/detail(id=${userDomain.id})}">戻る</a>
+			<a href="user-modify.html" th:href="@{/user/detail(id=${userFormDto.id})}">戻る</a>
 			<input type="submit" value="変更確認">
 		</div>
 	</form>
