--- a/src/main/resources/templates/user-entry.html
+++ b/src/main/resources/templates/user-entry.html
@@ -16,14 +16,14 @@
 				<td><span th:text="*{id}">999</span><input type="hidden" th:field="*{id}" value="999"></td>
 			</tr>
 			<tr>
-				<th>ユーザ名</td>
+				<th>ユーザ名</th>
 				<td>
 					<div id="name-errors" th:errors="*{name}" class="error-message"></div><input type="text"
 						th:field="*{name}" value="テスト名">
 				</td>
 			</tr>
 			<tr>
-				<th>管理者</td>
+				<th>管理者</th>
 				<td>
 					<input type="radio" th:field="*{administrator}" value="true" />
 					<label th:for="${#ids.prev('administrator')}" th:text="true"></label>
