--- a/src/main/resources/templates/main-menu.html
+++ b/src/main/resources/templates/main-menu.html
@@ -5,6 +5,7 @@
     <title>メインメニュー</title>
 </head>
 <body>
-<a href="/user/list">ユーザメンテナンス</a>
+<p><a href="/user/list">ユーザメンテナンス</a></p>
+<p><a href="/item/list">商品マスタメンテナンス</a></p>
 </body>
 </html>
