--- a/src/main/resources/templates/user-entry-confirm.html
+++ b/src/main/resources/templates/user-entry-confirm.html
@@ -28,7 +28,7 @@
 		<input type="hidden" th:field="*{id}">
 		<input type="hidden" th:field="*{name}">
 		<input type="hidden" th:field="*{administrator}">
-		<div><a href="user-modify.html"
+		<div><a href="user-entry.html"
 				th:href="@{/user/entry(id=${userFormDto.id},name=${userFormDto.name},administrator=${userFormDto.administrator})}">戻る</a>
 			<input type="submit" value="登録">
 		</div>
